--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "description": "A simple steam api tool.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Devin Wood",
   "license": "ISC",
