--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A simple steam api tool.",
   "main": "index.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "node index.js",
+    "client": "npm start --prefix client",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Client && npm run build --prefix Client"
+  },
+  "engines": {
+    "node": "14.15.3"
   },
   "author": "Devin Wood",
   "license": "ISC",
