package.json updated

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
+    "preinstall": "npm install -g angular-cli",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix Client && npm run build --prefix Client"
   },
   "engines": {
