--- a/Client/angular.json
+++ b/Client/angular.json
@@ -65,8 +65,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PortfolioApp:build",
-            "port": 80
+            "browserTarget": "PortfolioApp:build"
           },
           "configurations": {
             "production": {
