--- a/Client/package.json
+++ b/Client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node clientserver.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,23 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1100.1",
     "@angular/animations": "~11.0.0",
+    "@angular/cli": "~11.0.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "express": "^4.17.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
@@ -35,9 +33,13 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "path": "^0.12.7",
     "protractor": "~7.0.0",
+    "rxjs": "~6.6.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   }
 }
